Expose javac internals to annotation processor